# diy-life

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.run/: Flash.run.xml
src/: lib.rs  main.rs  types.rs  values.rs
src/ext/: mod.rs  pin_ext.rs  terminal.rs
src/life/: mod.rs  random.rs  universe.rs
